yaml/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-registry
spec:
  selector:
    matchLabels:
      app: private-registry
  template:
    metadata:
      labels:
        app: private-registry
    spec:
      containers:
      - name: private-registry
        image: registry:2
        ports:
            - containerPort: 5000
            - containerPort: 443
        volumeMounts:
          - name: private-registry-storage
            mountPath: /var/lib/registry
      volumes:
        - name: private-registry-storage
          persistentVolumeClaim:
            claimName: private-registry-volume-claim
