yaml/private-registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: private-registry-service
  labels:
    app: private-registry-service
spec:
  type: NodePort
  selector:
    app: private-registry-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
