yaml/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devops-sample-service
  labels:
    app: devops-sample-service
spec:
  type: NodePort
  selector:
    app: devops-sample
  ports:
    - port: 18080
      targetPort: 18080
      protocol: TCP
